--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="col-lg-6 col-12 pt-lg-0 pt-3">
                         <label for="html">React</label>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">50%</div>
+                            <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">30%</div>
                           </div>
                     </div>
                 </div>
@@ -156,14 +156,14 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/BxVpTRU_lYQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/NedNzK-jstc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <div class="carousel-caption d-none d-md-block">
                           <h5 class="text-success">Project 1</h5>
                           <a href="https://aktk.herokuapp.com/" target="_blank">Web Version</a>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/UQYH7IV80R8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/LNvGx-M5oac" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <div class="carousel-caption d-none d-md-block">
                           <h5 class="text-success">Project 2</h5>
                           <a href="https://amzprojectphotography.herokuapp.com/" target="_blank">Web Version</a>
