--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                                 <img src="./img/profile.jpg" alt="2" class="rounded-pill">
                             </div>
                             <div class="col-6 my-auto my-auto mx-auto">
-                                <h2>Hello, I'm<br/>  <span>R Kar Toe Kyaw</span></h2>
+                                <h3>I'm <span style="font-weight: normal;"> </span><b>R Kar Toe Kyaw</b><span style="font-weight: normal;">, a Front End Web Developer.</span></h3>
+                                <!-- <h2>Hello, I'm<br/>  <span>R Kar Toe Kyaw</span></h2> -->
                                 <h3 class="lead">A web developer who is young, enthusiastic and quick learner.</h3>
                                 <a href="#about" class="btn btn-primary">About Me</a>
                             </div>
