--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 <h2 class="text-center fw-bolder text-success"><b>About Me</b></h2>
                                 <h4 class="mt-4"><b>Who am i?</b></h4>
                                 <h3>I'm <b>R Kar Toe Kyaw</b>, a Front End Web Developer.</h3>
-                                <p>I am studying Computer Science at University of People.</p>
+                                <p>I have graduated with a Bachelor of Science degree in Computer Science from the University of People.</p>
                                 <div class="row p-lg-3 p-0 mb-lg-3 mb-0">
                                     <div class="col-md-6 col-12 p-2">
                                         <b>Email:</b> arkartoekyaw@gmail.com<br>
