--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <div class="col-6 my-auto my-auto mx-auto">
                                 <h3>I'm <span style="font-weight: normal;"> </span><b>R Kar Toe Kyaw</b><span style="font-weight: normal;">, a Front End Web Developer.</span></h3>
                                 <!-- <h2>Hello, I'm<br/>  <span>R Kar Toe Kyaw</span></h2> -->
-                                <h3 class="lead">A web developer who is young, enthusiastic and quick learner.</h3>
+                                <h3 class="lead">A web developer who is a young, enthusiastic, and quick learner.</h3>
                                 <a href="#about" class="btn btn-primary">About Me</a>
                             </div>
                         </div>
@@ -70,7 +70,13 @@
                                 <h2 class="text-center fw-bolder text-success"><b>About Me</b></h2>
                                 <h4 class="mt-4"><b>Who am i?</b></h4>
                                 <h3>I'm <b>R Kar Toe Kyaw</b>, a Front End Web Developer.</h3>
-                                <p>I have graduated with a Bachelor of Science degree in Computer Science from the University of People.</p>
+                                <h5>Academic Qualification</h5>
+                                    <ul>
+                                      <li>Bachelor Degree of Science in Computer Science (University of the People)</li>
+                                      <li>Meta Front-End Developer Professional Certificate</li>
+                                      <li>Front-End Web Development with ReactJS (The Hong Kong University of Science and Technology)</li>
+                                      <li>Back-End Web Development with NodeJS (The Hong Kong University of Science and Technology)</li>
+                                    </ul>
                                 <div class="row p-lg-3 p-0 mb-lg-3 mb-0">
                                     <div class="col-md-6 col-12 p-2">
                                         <b>Email:</b> arkartoekyaw@gmail.com<br>
