--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 <h2 class="text-center fw-bolder text-success"><b>About Me</b></h2>
                                 <h4 class="mt-4"><b>Who am i?</b></h4>
                                 <h3>I'm <b>R Kar Toe Kyaw</b>, a Front End Web Developer.</h3>
-                                <h5>Academic Qualification</h5>
+                                <h5 class="pt-2"><b>Academic Qualification</b></h5>
                                     <ul>
                                       <li>Bachelor Degree of Science in Computer Science (University of the People)</li>
                                       <li>Meta Front-End Developer Professional Certificate</li>
