--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                     </div>                           
                                     <div class="col-md-6 col-12 p-2">
                                         <b>Name:</b> R Kar Toe Kyaw<br>
-                                        <b>Age:</b> 25
+                                        <b>Age:</b> <span id="age"></span>
                                     </div>
                                     <div class="col-md-6 col-12  p-2">
                                         <a href="CV.pdf" target="_blank" class="btn btn-primary">Download CV</a>
